# moduloreactor

./: CHANGELOG.md  MANIFEST.in  README.md  __init__.py  apps.py  handler.py  pyproject.toml  urls.py  views.py
docs/: usage.md
management/commands/: moduloreactor.py
moduloreactor/: apps.py  debug.py  events.py  handler.py  orchestrator_bridge.py  ui_defaults.py  urls.py  views.py
moduloreactor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
moduloreactor/docs/: messages-ui.md  usage.md
moduloreactor/management/commands/: moduloreactor.py
moduloreactor/static/moduloreactor/: frontboil.js
moduloreactor/templates/moduloreactor/: test_page.html
moduloreactor/templates/moduloreactor/ui/: alert.html  modal.html  toast.html
moduloreactor/templatetags/: moduloreactor.py
static/moduloreactor/: frontboil.js
templates/moduloreactor/: test_page.html
templatetags/: moduloreactor.py
