[project]
name = "moduloreactor"
version = "0.3.1"
description = "Event-driven HTMX integration for Django"
authors = [
    { name = "PT Claverio Data Pratama" },
]
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["moduloreactor*"]

[tool.setuptools.package-data]
moduloreactor = [
    "static/moduloreactor/*.js",
    "static/moduloreactor/*.css",
    "templates/moduloreactor/**/*.html",
    "docs/*.md",
]
